# Bharat-Agent-Grid

./: .env.example  .gitignore  .gitlab-ci.yml  ANTIGRAVITY_OUTPUT.md  Dockerfile  README.md  RISKS.md  SOURCES.md  pyproject.toml  requirements.txt
demo/: run_demo.py
docs/: ARCHITECTURE.md  PITCH.md  RUN.md
docs/wireframes/: NOTES.md  index.html
frontend/: index.html
src/: __init__.py  config.py  contracts.py
src/agents/: __init__.py  base.py  grounding.py  hospital_agent.py  money_agent.py  scheme_agent.py  verifier.py
src/api/: app.py
src/bharat_agent_grid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/growth/: __init__.py  proof_of_help.py
src/orchestrator/: grid.py  llm_planner.py  planner.py
src/trust_ledger/: __init__.py  ledger.py
src/voice/: voice_io.py
tests/: test_api.py  test_grid.py  test_harden.py  test_ledger.py  test_verifier.py
