[project]
name = "bharat-agent-grid"
version = "0.1.0"
description = "Trust-Verified, Voice-First Agentic Layer for Everyday India"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
